# ir

./: Cargo.toml  README.md  notes.md
doc/: spec.md
notes/: spec.md  todo.md
src/: environ.rs  err.rs  err_pipe.rs  fd.rs  fdio.rs  lib.rs  main.rs  res.rs  result.rs  sel.rs  sig.rs  spec.rs  sys.rs
tests/: integration-file.rs  integration.rs
tests/integration/: echo.json  interleaved.py  ir.py  stdout-stderr.json  test.py  test_capture.py  test_err.py  test_file.py  test_multiple.py  test_results.py
tests/integration/scripts/: general  subprocs1.py
work/: spec.json  test-write.py
work/specs/: bad-exe.json  env-keep.json  multiple.json  out-capture-mem-simple.json  out-capture-mem.json  out-capture.json  out-file.json  out-sleep.json
