[package]
name = "ir"
version = "0.1.0"
authors = ["Alex Samuel <alex@alexsamuel.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
libc = { path = "/Users/alex/src/libc" }

