[package]
name = "ir"
version = "0.1.0"
authors = ["Alex Samuel <alex@alexsamuel.net>"]
edition = "2018"

[lib]
name = "ir"
path = "src/lib.rs"

[dependencies]
assert_cmd = "0.11"
exitcode = "1.1.2"
libc = "0.2"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
libc = { path = "../libc" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
